@@ -49,7 +49,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
         @rtype: L{Envelope<pyamf.remoting.Envelope>}
         @return: The AMF Response.
         """
-        response = remoting.Envelope(request.amfVersion, request.clientType)
+        response = remoting.Envelope(request.amfVersion)
 
         for name, message in request:
             self.request.amf_request = message
