@@ -43,7 +43,7 @@ class WSGIGateway(gateway.BaseGateway):
         @rtype: L{Envelope<pyamf.remoting.Envelope>}
         @return: The AMF Response.
         """
-        response = remoting.Envelope(request.amfVersion, request.clientType)
+        response = remoting.Envelope(request.amfVersion)
 
         for name, message in request:
             processor = self.getProcessor(message)
