@@ -65,7 +65,7 @@ class TwistedServerTestCase(unittest.TestCase):
 
         self.gw.addService(echo)
 
-        env = remoting.Envelope(pyamf.AMF0, pyamf.ClientTypes.Flash9)
+        env = remoting.Envelope(pyamf.AMF3)
         request = remoting.Request('echo', body=['hello'])
         env['/1'] = request
 
@@ -75,8 +75,7 @@ class TwistedServerTestCase(unittest.TestCase):
         def cb(result):
             response = remoting.decode(result)
 
-            self.assertEquals(response.amfVersion, pyamf.AMF0)
-            self.assertEquals(response.clientType, pyamf.ClientTypes.Flash9)
+            self.assertEquals(response.amfVersion, pyamf.AMF3)
 
             self.assertTrue('/1' in response)
             body_response = response['/1']
@@ -95,7 +94,7 @@ class TwistedServerTestCase(unittest.TestCase):
 
         self.gw.addService(echo)
 
-        env = remoting.Envelope(pyamf.AMF0, pyamf.ClientTypes.Flash9)
+        env = remoting.Envelope(pyamf.AMF3)
         request = remoting.Request('echo', body=['hello'])
         env['/1'] = request
 
@@ -105,8 +104,7 @@ class TwistedServerTestCase(unittest.TestCase):
         def cb(result):
             response = remoting.decode(result)
 
-            self.assertEquals(response.amfVersion, pyamf.AMF0)
-            self.assertEquals(response.clientType, pyamf.ClientTypes.Flash9)
+            self.assertEquals(response.amfVersion, pyamf.AMF3)
 
             self.assertTrue('/1' in response)
             body_response = response['/1']
@@ -117,7 +115,7 @@ class TwistedServerTestCase(unittest.TestCase):
         return d.addCallback(cb)
 
     def test_unknown_request(self):
-        env = remoting.Envelope(pyamf.AMF0, pyamf.ClientTypes.Flash9)
+        env = remoting.Envelope(pyamf.AMF0)
         request = remoting.Request('echo', body=['hello'])
         env['/1'] = request
 
@@ -141,7 +139,7 @@ class TwistedServerTestCase(unittest.TestCase):
         self.gw.expose_request = True
         self.executed = False
 
-        env = remoting.Envelope(pyamf.AMF0, pyamf.ClientTypes.Flash9)
+        env = remoting.Envelope(pyamf.AMF0)
         request = remoting.Request('echo', body=['hello'])
         env['/1'] = request
 
@@ -264,7 +262,7 @@ class TwistedServerTestCase(unittest.TestCase):
 
         self.gw.addService(echo)
 
-        env = remoting.Envelope(pyamf.AMF0, pyamf.ClientTypes.Flash9)
+        env = remoting.Envelope(pyamf.AMF0)
         request = remoting.Request('echo', body=['hello'])
         env['/1'] = request
 
@@ -291,7 +289,7 @@ class TwistedServerTestCase(unittest.TestCase):
 
         self.gw.addService(echo)
 
-        env = remoting.Envelope(pyamf.AMF0, pyamf.ClientTypes.Flash9)
+        env = remoting.Envelope(pyamf.AMF0)
         request = remoting.Request('echo', body=[('Hi', 'Mom')])
         env['/1'] = request
 
@@ -324,7 +322,7 @@ class TwistedServerTestCase(unittest.TestCase):
         self.gw.addService(echo)
         self.gw.timezone_offset = -18000
 
-        msg = remoting.Envelope(amfVersion=pyamf.AMF0, clientType=0)
+        msg = remoting.Envelope(amfVersion=pyamf.AMF0)
         msg['/1'] = remoting.Request(target='echo', body=[now])
 
         stream = remoting.encode(msg)
@@ -352,7 +350,7 @@ class TwistedServerTestCase(unittest.TestCase):
 
         self.gw.addService(service)
 
-        env = remoting.Envelope(pyamf.AMF0, pyamf.ClientTypes.Flash9)
+        env = remoting.Envelope(pyamf.AMF0)
         request = remoting.Request('service')
         env['/1'] = request
 
